kubernetes/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp
# spec:
#   selector:
#     app: webapp
#   type: NodePort
#   ports:
#   - port: 80
#     nodePort: 30180
#     name: http

apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  #type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
