kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - host: webapp.192.168.49.2.nip.io
      http: 
        paths:
          - path: /
            backend:
              serviceName: webapp # service name
              servicePort: 80 # service port
